--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ bench = false
 [dependencies]
 tock-registers = { version = "0.7.0", default-features = false, features = ["register_types"] }
 cortex-a = { version = "7.2.0" } 
+bitvec = { version = "1.0.0", default-features = false }
