--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ cortex-a = { version = "7.2.0" }
 bitvec = { version = "1.0.0", default-features = false }
 bitfield = "0.13.2"
 num_enum = { version = "0.5.7", default-features = false }
+bitflags = "1.3.2"
